<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Killhope Museum</string>
    <string name="hello_world">Hello Rob!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="menu_history">Geological History</string>
    <string name="menu_minerals">Minerals</string>
    <string name="menu_floorplan">Floor Plan</string>
    <string name="menu_quiz">Quiz</string>
    <string name="history_textlorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="history_name">History</string>
    <string name="title_activity_minerals">Minerals</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_help">Help</string>
    <string name="qr">QR</string>
    <string name="mineral">Mineral</string>
    <string name="title_qr">QR Scanner</string>
    <string name="title_mineral">Mineral</string>
    <string name="menu_help">Help</string>

    <string name="title_floorplan">Floor Plan</string>

    <string name="help_next">Next</string>
    <string name="help_previous">Prev</string>
    <string name="search_label">Search Label</string>
    <string name="search_hint">Search Hint</string>
    <string name="menu_glossary">Glossary</string>
    <string name="title_info">Info</string>

</resources>
