<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/no_margin"
    tools:context=".KillhopeActivity$PlaceholderFragment"
    android:background="@drawable/bg">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_menu_logo"
        android:src="@drawable/killhopelogo"
        android:paddingBottom="@dimen/no_margin"
        android:paddingRight="@dimen/home_logo_rl_padding"
        android:paddingLeft="@dimen/home_logo_rl_padding"
        android:scaleType="fitXY"
        android:adjustViewBounds="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image_menu_logo"
        android:paddingLeft="@dimen/menu_padding"
        android:paddingRight="@dimen/menu_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info"
                    android:id="@+id/button_main_info"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_glossary_large"
                    android:id="@+id/button_main_glossary"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help"
                    android:id="@+id/button_main_help"/>
            </LinearLayout>

            <Button
                android:background="@drawable/blue_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button_menu_history"
                android:text="@string/menu_history"
                style="@style/button_text" />

            <Button
                android:background="@drawable/blue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_menu_minerals"
                android:text="@string/menu_minerals"
                style="@style/button_text"
                android:layout_below="@+id/button_menu_history"
                android:layout_centerHorizontal="true" />

            <Button
                android:background="@drawable/blue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_menu_floorplan"
                android:text="@string/menu_floorplan"
                style="@style/button_text"
                android:layout_below="@+id/button_menu_minerals"
                android:layout_centerHorizontal="true" />

            <Button
                android:background="@drawable/blue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_menu_quiz"
                android:text="@string/menu_quiz"
                style="@style/button_text"
                android:layout_below="@+id/button_menu_floorplan"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_facebook"
                    android:id="@+id/button_main_facebook"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_twitter"
                    android:id="@+id/button_main_twitter"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_website"
                    android:id="@+id/button_main_linkedin"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
